--- a/api/template/experiences.gohtml
+++ b/api/template/experiences.gohtml
@@ -1,19 +1,21 @@
+{{range .Experiences -}}
 <li class="experience-item{{if .Education}} education{{end}}">
     <span class="date-range">{{.Date.Start}} - {{.Date.End}}</span>
     <div>
         <a class="experience-title" href="{{.Workplace.Link}}" target="_blank" rel="noreferrer">
-            {{ .Workplace.LogoSVG }}
+            {{ .Workplace.LogoSVG }}    
             <h3>{{.Workplace.Name}}</h3>
         </a>
-        {{- range .Positions}}
+        {{range .Positions -}}
         <h4 {{if .Current}}class="current"{{end}}>{{.Title}}</h4>
         {{- end}}
-        {{- if .Topics}}
+        {{if .Topics -}}
         <div class="topic-wrapper">
-            {{- range .Topics}}
+            {{range .Topics -}}
             <span class="topic">{{.}}</span>
             {{- end}}
         </div>
         {{- end}}
     </div>
 </li>
+{{- end}}
