--- a/api/template/index.gohtml
+++ b/api/template/index.gohtml
@@ -1,34 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <title>{{.Title}}</title>
-    <meta property="og:description" content="{{.Description}}">
-    <meta name="description" content="{{.Description}}">
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png">
-    <meta property="og:locale" content="en_AU">
-    <meta property="og:url" content="https://n.doolan.dev">
-    <meta property="og:type" content="profile">
-    <meta property="og:profile:first_name" content="Nathan">
-    <meta property="og:profile:first_name" content="Doolan">
-    <meta property="og:profile:gender" content="male">
-    <meta property="og:title" content="Nathan Doolan">
-    <meta property="og:image" content="/images/profile.webp">
-    <meta name="color-scheme" content="dark light">
-    <meta name="theme-color" content="#283c37">
-    <link rel="preload" href="/fonts/JosefinSans.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="preload" href="/fonts/OxygenMono.woff2" as="font" type="font/woff2" crossorigin>
-    <link rel="stylesheet" href="/css/styles.css">
-    <link rel="stylesheet" href="/css/theme-switch.css">
-
-    <script type="module" src="/scripts/htmx.min.js"></script>
-    <script type="module" src="/scripts/hyperscript.min.js"></script>
-</head>
+{{ template "head" .}}
 
 <body class="dark">
     <header>
@@ -37,71 +10,34 @@
         </h1>
         <nav>
             <ul id="internal-links" aria-label="internal links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experience</a></li>
-                <li><a href="#projects">Projects</a></li>
+                {{range .InternalLinks -}}
+                <li>
+                    <a href="{{.URL}}">{{.Label}}</a>
+                </li>
+                {{- end}}
             </ul>
         </nav>
         <ul id="external-links" aria-label="external links">
+            {{range .ExternalLinks -}}
             <li>
-                <a href="https://github.com/NDoolan360" target="_blank" rel="noreferrer">
-                    <svg class="logo">
-                        <use href="/images/logos/github.svg#logo"></use>
-                    </svg>
+                <a href="{{.URL}}" target="_blank" rel="noreferrer">
+                    {{if .Logo -}}
+                    {{.Logo}}
+                    {{- else -}}
+                    {{.Label}}
+                    {{- end}}
                 </a>
             </li>
-            <li>
-                <a href="https://www.linkedin.com/in/nathan-doolan-835a13171" target="_blank" rel="noreferrer">
-                    <svg class="logo">
-                        <use href="/images/logos/linkedin.svg#logo"></use>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="https://discord.com/users/nothindoin" target="_blank" rel="noreferrer">
-                    <svg class="logo">
-                        <use href="/images/logos/discord.svg#logo"></use>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="https://cults3d.com/en/users/ND360" target="_blank" rel="noreferrer">
-                    <svg class="logo">
-                        <use href="/images/logos/cults3d.svg#logo"></use>
-                    </svg>
-                </a>
-            </li>
-            <li>
-                <a href="https://boardgamegeek.com/user/Nothin_Doin" target="_blank" rel="noreferrer">
-                    <svg class="logo">
-                        <use href="/images/logos/bgg.svg#logo"></use>
-                    </svg>
-                </a>
-            </li>
+            {{- end}}
             <li>
                 <button id="theme-toggle" title="Toggles light & dark theme" aria-label="auto" aria-live="polite"
                     _="on click toggle .dark on body">
-                    <svg class="sun-and-moon logo" aria-hidden="true" viewBox="0 0 24 24" height="24" width="24">
-                        <mask class="moon" id="moon-mask">
-                            <rect x="0" y="0" width="100%" height="100%" fill="white" />
-                            <circle cx="24" cy="10" r="6" fill="black" />
-                        </mask>
-                        <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
-                        <g class="sun-beams" stroke="currentColor">
-                            <line x1="1" y1="12" x2="3" y2="12" />
-                            <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
-                            <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
-                            <line x1="12" y1="1" x2="12" y2="3" />
-                            <line x1="12" y1="21" x2="12" y2="23" />
-                            <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
-                            <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
-                            <line x1="21" y1="12" x2="23" y2="12" />
-                        </g>
-                    </svg>
+                    {{.ThemeSwitchSVG}}
                 </button>
             </li>
         </ul>
     </header>
+
     <main>
         <section id="about">
             <div class="heading">
@@ -109,20 +45,11 @@
                 <hr>
             </div>
             <div id="profile">
-                <img alt="Profile Image" title="Picture of me at the Strawberry Field in Liverpool"
-                    srcset="/images/profile-192.webp, /images/profile-512.webp 2.66x, /images/profile-792.webp 4.125x"
-                    src="/images/profile-192.webp" height="192">
+                <img alt="Profile Image" {{range .Profile.ImageAttr}}{{.}}{{end}} height="192">
                 <div>
-                    <p>
-                        Hey there, I'm Nathan Doolan, a full-time software engineer based in Melbourne, Australia.
-                        I spend my days coding and my spare time collecting board games, enjoying nature, and
-                        experimenting with my 3D printer.
-                    </p>
-                    <p>
-                        With a background in computer science, I'm always eager to learn new things, tackle new
-                        challenges, and find satisfaction in the simple joy of crafting an elegant solution to a
-                        problem.
-                    </p>
+                    {{range .Profile.Paragraphs -}}
+                    <p>{{.}}</p>
+                    {{- end}}
                 </div>
             </div>
         </section>
@@ -151,42 +78,21 @@
         </section>
 
         <footer>
+            {{range .ToolSections -}}
             <div id="tools">
-                <h3>Built with:</h3>
+                <h3>{{.Title}}</h3>
                 <ul>
+                    {{range .Links -}}
                     <li>
-                        <a class="btn" href="https://go.dev" target="_blank" rel="noreferrer"
-                            hx-get="/images/logos/go.svg" hx-trigger="load" hx-swap="afterbegin">
-                            <p>Go</p>
+                        <a class="btn" href="{{.URL}}" target="_blank" rel="noreferrer">
+                            {{.Logo}}
+                            <p>{{.Label}}</p>
                         </a>
                     </li>
-                    <li>
-                        <a class="btn" href="https://htmx.org" target="_blank" rel="noreferrer"
-                            hx-get="/images/logos/htmx.svg" hx-trigger="load" hx-swap="afterbegin">
-                            <p>htmx</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="btn" href="https://hyperscript.org" target="_blank" rel="noreferrer"
-                            hx-get="/images/logos/hyperscript.svg" hx-trigger="load" hx-swap="afterbegin">
-                            <p>hyperscript</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="btn" href="https://tailwindcss.com" target="_blank" rel="noreferrer"
-                            hx-get="/images/logos/tailwind.svg" hx-trigger="load" hx-swap="afterbegin">
-                            <p>Tailwind CSS</p>
-                        </a>
-                    </li>
+                    {{- end}}
                 </ul>
             </div>
-            <div>
-                <h3>Deployed with:</h3>
-                <a class="btn" href="https://vercel.com" target="_blank" rel="noreferrer"
-                    hx-get="/images/logos/vercel.svg" hx-trigger="load" hx-swap="afterbegin">
-                    <p>Vercel</p>
-                </a>
-            </div>
+            {{- end}}
             <p> &copy; Nathan Doolan {{.CopyrightYear}} </p>
         </footer>
     </main>
