--- a/api/template/index.gohtml
+++ b/api/template/index.gohtml
@@ -59,8 +59,30 @@
                 <h2>Experience</h2>
                 <hr>
             </div>
-            <ol hx-get="/api/experiences" hx-trigger="load">
-                <span class="loader"></span>
+            <ol>
+                {{range .Experiences -}}
+                <li class="experience-item{{if .Education}} education{{end}}">
+                    <span class="date-range">{{.Date.Start}} - {{.Date.End}}</span>
+                    <div>
+                        <a class="experience-title" href="{{.Workplace.URL}}" target="_blank" rel="noreferrer">
+                            {{.Workplace.Logo}}
+                            <h3>{{.Workplace.Label}}</h3>
+                        </a>
+                        {{range .Positions -}}
+                        <h4 {{if .Current}}class="current"{{end}}>{{.Title}}</h4>
+                        {{- end}}
+                        {{if .Topics -}}
+                        <div class="topic-wrapper">
+                            {{range .Topics -}}
+                            <span class="topic">
+                                {{.}}
+                            </span>
+                            {{- end}}
+                        </div>
+                        {{- end}}
+                    </div>
+                </li>
+                {{- end}}
             </ol>
             <a class="btn" href="/documents/Nathan-Doolan-Resume.pdf" download>
                 Full Resume &RightArrow;
