Update Copyright test

--- a/api/template/index.gohtml
+++ b/api/template/index.gohtml
@@ -115,7 +115,7 @@
                 </ul>
             </div>
             {{- end}}
-            <p> &copy; Nathan Doolan {{.CopyrightYear}} </p>
+            <p> {{.Copyright}} </p>
         </footer>
     </main>
 </body>
