Remove Bun in favour of build scripts

--- a/api/assets/template/index.gohtml
+++ b/api/assets/template/index.gohtml
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 
 {{ template "head" .}}
 
@@ -115,7 +115,7 @@
                 </ul>
             </div>
             {{- end}}
-            <p> {{.Copyright}} </p>
+            <p id="copyright"> {{.Copyright}} </p>
         </footer>
     </main>
 </body>
