Add support for markdown pages

--- a/api/assets/template/index.gohtml
+++ b/api/assets/template/index.gohtml
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
 
-{{ template "head" .}}
+<head>
+    {{ template "head" .}}
+</head>
 
 <body class="dark">
     <header>
