Make zero-md.min.js local

--- a/api/assets/template/markdown.gohtml
+++ b/api/assets/template/markdown.gohtml
@@ -3,7 +3,7 @@
 
 <head>
   {{ template "head" .}}
-  <script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js" ></script>
+  <script type="module" src="/scripts/zero-md.min.js" ></script>
 </head>
 
 <body>
