Move resume to Markdown

--- a/api/assets/template/index.gohtml
+++ b/api/assets/template/index.gohtml
@@ -86,7 +86,7 @@
                 </li>
                 {{- end}}
             </ol>
-            <a class="btn" href="/documents/Nathan-Doolan-Resume.pdf" download>
+            <a class="btn" href="/markdown?file=/documents/Resume.md" target="_blank" rel="noreferrer">
                 Full Resume &RightArrow;
             </a>
         </section>
