--- a/api/assets/template/head.gohtml
+++ b/api/assets/template/head.gohtml
@@ -24,4 +24,10 @@
 
 <script type="module" src="/scripts/htmx.min.js"></script>
 <script type="module" src="/scripts/hyperscript.min.js"></script>
+<script>
+    document.addEventListener('readystatechange', () => {
+        const isLightMode = window.matchMedia('(prefers-color-scheme: light)').matches;
+        document.body.classList.toggle('dark', !isLightMode);
+    });
+</script>
 {{- end}}
