Add loader for markdown rendering

--- a/api/assets/template/markdown.gohtml
+++ b/api/assets/template/markdown.gohtml
@@ -14,6 +14,7 @@
   </nav>
   <main>
     <section id="markdown">
+      <span class="loader" _="on 'zero-md-rendered' from document remove me"></span>
       <zero-md {{.MarkdownSource}}>
         <template>
           <style>
