--- a/api/assets/template/projects.html.tmpl
+++ b/api/assets/template/projects.html.tmpl
@@ -24,7 +24,7 @@
     {{if .Topics -}}
     <div class="card-topics topic-wrapper">
         {{range .Topics -}}
-        <span class="topic">{{.}}</span>
+        <span class="chip">{{.}}</span>
         {{- end}}
     </div>
     {{- end}}
