--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,10 @@
     @apply max-lg:hidden;
   }
 
+  #internal-links a {
+    @apply hover:underline;
+  }
+
   #external-links {
     @apply flex gap-2 flex-row my-3;
   }
@@ -73,15 +77,15 @@
     @apply flex flex-col gap-6 pt-12 md:pt-20 lg:pt-24;
   }
 
-  section .heading {
-    @apply flex items-center gap-6;
+  .heading {
+    @apply flex items-center gap-6 min-h-[45px];
   }
 
-  section .heading h2 {
+  .heading h2 {
     @apply text-2xl font-heading;
   }
 
-  section .heading hr {
+  .heading hr {
     @apply flex-grow border-accent opacity-40;
   }
 
@@ -101,19 +105,19 @@
     @apply flex flex-col gap-12;
   }
 
-  #experience ol:has(:hover) .experience-item:not(:hover) {
-    @apply opacity-50;
+  #experience ol:has(.experience-item:hover) .experience-item:not(:hover) {
+    @apply opacity-50 motion-reduce:opacity-100;
   }
 
   .experience-item {
-    @apply relative grid sm:grid-cols-4 sm:gap-8 md:gap-4 w-full transition-opacity duration-500;
+    @apply relative grid sm:grid-cols-4 sm:gap-8 md:gap-4 w-full transition-opacity duration-500 motion-reduce:transition-none;
   }
 
   .experience-item .date-range {
     @apply mb-2 mt-1 text-sm uppercase tracking-wide sm:col-span-1 font-heading;
   }
 
-  .experience-item div {
+  .experience-item > div {
     @apply sm:col-span-3;
   }
 
@@ -138,7 +142,7 @@
   }
 
   #project-gallery:has(:hover) .card:not(:hover) {
-    @apply opacity-50;
+    @apply opacity-50 motion-reduce:opacity-100;
   }
 
   .loader {
@@ -146,7 +150,7 @@
   }
 
   .card {
-    @apply flex flex-col gap-6 relative bg-secondary rounded-xl p-6 flex-grow max-w-full focus-visible:scale-105 transition-all motion-reduce:focus-visible:scale-100 duration-500;
+    @apply flex flex-col gap-6 relative bg-secondary rounded-xl p-6 flex-grow max-w-full focus-visible:scale-105 transition-all motion-reduce:focus-visible:scale-100 duration-500 motion-reduce:duration-0;
   }
 
   .card:hover {
@@ -155,14 +159,6 @@
 
   .card-link {
     @apply absolute inset-0 rounded-xl;
-  }
-
-  a:not(.card-link) {
-    @apply focus-visible:scale-110 transition-transform motion-reduce:focus-visible:scale-100;
-  }
-
-  a:not(.card-link):hover {
-    @apply scale-110 motion-reduce:scale-100;
   }
 
   .card-feature-image {
@@ -179,7 +175,7 @@
   }
 
   .card-title {
-    @apply truncate w-fit tracking-tight text-lg font-heading;
+    @apply truncate w-fit tracking-tight text-lg font-heading flex gap-2;
   }
 
   .card-detail {
@@ -200,24 +196,23 @@
 
   .btn,
   .chip {
-    @apply w-fit px-3 py-1 border-none rounded-full font-heading inline-flex flex-row flex-nowrap gap-2 leading-4 align-baseline font-medium;
+    @apply w-fit px-3 py-1 border-none rounded-full font-heading inline-flex flex-row flex-nowrap gap-2 leading-4 align-baseline font-medium focus-visible:scale-110 transition-all duration-500 motion-reduce:focus-visible:scale-100 motion-reduce:transition-none;
   }
 
   .btn {
-    @apply bg-secondary dark:bg-accent dark:text-background transition-colors;
+    @apply bg-secondary dark:bg-accent dark:text-background;
   }
 
   .chip {
-    @apply bg-primary text-background transition-all;
+    @apply bg-primary text-background cursor-default;
   }
 
-  a.chip:hover {
-    @apply shadow-secondary shadow-md;
+  a.chip {
+    @apply cursor-pointer;
   }
 
-  a.chip::after {
-    content: "↗";
-    @apply left-1;
+  a:is(.btn, .chip):hover {
+    @apply shadow-background shadow-md scale-110 motion-reduce:scale-100 motion-reduce:shadow-none;
   }
 
   .topic-wrapper {
@@ -225,7 +220,7 @@
   }
 
   footer {
-    @apply py-12 md:py-20 lg:pt-24 lg:pb-0;
+    @apply pt-0 pb-12 lg:pb-0;
   }
 
   #tools ul,
@@ -239,5 +234,20 @@
 
   #copyright {
     @apply pt-4;
+  }
+
+  :is(.experience-title, .card-title)::after {
+    content: "↗";
+    @apply scale-110 font-heading opacity-0 transition-opacity duration-500 motion-reduce:duration-0;
+  }
+
+  .card:hover .card-title::after,
+  .experience-title:hover::after {
+    @apply opacity-100;
+  }
+
+  a:is(.chip, .btn)::after {
+    content: "↗";
+    @apply scale-110 font-heading;
   }
 }
