--- a/api/assets/template/markdown.html.tmpl
+++ b/api/assets/template/markdown.html.tmpl
@@ -6,14 +6,17 @@
   <script type="module" src="/scripts/zero-md.min.js" ></script>
 </head>
 
-<body class="dark container mx-auto max-w-screen-lg">
-  <nav class="fixed">
-    <section>
-      {{ template "theme-switch" .}}
+<body class="dark">
+  <main id="markdown" class="px-0 mx-8 md:mx-16 lg:mx-32 max-w-full">
+    <section class="flex flex-row items-center justify-between">
+      <h1>
+        <a href="/"> /ND </a>
+      </h1>
+      <span class="w-fit">
+        {{ template "theme-switch" .}}
+      </span>
     </section>
-  </nav>
-  <main>
-    <section id="markdown">
+    <section>
       <span class="loader" _="on 'zero-md-rendered' from document remove me"></span>
       <zero-md {{.MarkdownSrcAttr}}>
         <template>
