--- a/api/assets/template/head.html.tmpl
+++ b/api/assets/template/head.html.tmpl
@@ -19,7 +19,7 @@
 <meta name="color-scheme" content="dark light">
 <meta name="theme-color" content="#283c37">
 <link rel="preload" href="/fonts/JosefinSans.woff2" as="font" type="font/woff2" crossorigin>
-<link rel="preload" href="/fonts/OxygenMono.woff2" as="font" type="font/woff2" crossorigin>
+<link rel="preload" href="/fonts/FragmentMono.woff2" as="font" type="font/woff2" crossorigin>
 <link rel="stylesheet" href="/tailwind.css">
 
 <script type="module" src="/scripts/htmx.min.js"></script>
