--- a/api/assets/template/head.html.tmpl
+++ b/api/assets/template/head.html.tmpl
@@ -30,4 +30,8 @@
         document.body.classList.toggle('dark', !isLightMode);
     });
 </script>
+<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 {{- end}}
