Make manifest and sitemap dynamic on host and scheme

--- a/api/assets/template/manifest.json.tmpl
+++ b/api/assets/template/manifest.json.tmpl
@@ -5,7 +5,7 @@
     "theme_color": "#283c37",
     "background_color": "#192926",
     "display": "minimal-ui",
-    "start-url": "https://n.doolan.dev",
+    "start-url": "{{ .StartUrl }}",
     "prefer-related-applications": true,
     "related-applications": [],
     "icons": [
