--- a/api/assets/template/sitemap.xml.tmpl
+++ b/api/assets/template/sitemap.xml.tmpl
@@ -1,19 +1,19 @@
 <xml version="1.0" encoding="UTF-8">
     <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
         <url>
-            <loc>https://n.doolan.dev/</loc>
+            <loc>{{ .Url }}/</loc>
             <lastmod>2024-01-15</lastmod>
             <changefreq>monthly</changefreq>
             <priority>1.0</priority>
         </url>
         <url>
-            <loc>https://n.doolan.dev/api/projects?host=github&amp;host=bgg&amp;host=cults3d</loc>
+            <loc>{{ .Url }}/api/projects?host=github&amp;host=bgg&amp;host=cults3d</loc>
             <lastmod>2024-01-15</lastmod>
             <changefreq>weekly</changefreq>
             <priority>0.7</priority>
         </url>
         <url>
-            <loc>https://n.doolan.dev/markdown?file=/Resume.md</loc>
+            <loc>{{ .Url }}/markdown?file=/Resume.md</loc>
             <lastmod>2024-01-15</lastmod>
             <changefreq>monthly</changefreq>
             <priority>0.5</priority>
