--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -97,7 +97,7 @@
                 <h2>Projects</h2>
                 <hr>
             </div>
-            <ul id="project-gallery" hx-get="/api/projects?host=github&host=bgg&host=cults3d" hx-trigger="load">
+            <ul id="project-gallery" hx-get="/projects?host=github&host=bgg&host=cults3d" hx-trigger="load">
                 <span class="loader"></span>
             </ul>
         </section>
