--- a/templates/sitemap.xml.tmpl
+++ b/templates/sitemap.xml.tmpl
@@ -7,7 +7,7 @@
             <priority>1.0</priority>
         </url>
         <url>
-            <loc>{{ .Url }}/api/projects?host=github&amp;host=bgg&amp;host=cults3d</loc>
+            <loc>{{ .Url }}/projects?host=github&amp;host=bgg&amp;host=cults3d</loc>
             <lastmod>2024-01-15</lastmod>
             <changefreq>weekly</changefreq>
             <priority>0.7</priority>
