move resume to dedicated endpoint

--- a/templates/index.html.tmpl
+++ b/templates/index.html.tmpl
@@ -85,7 +85,7 @@
                 </li>
                 {{- end}}
                 <li>
-                    <a class="btn" href="/markdown?file=/Resume.md" target="_blank" rel="noreferrer">
+                    <a class="btn" href="/resume" target="_blank" rel="noreferrer">
                         Full Resume
                     </a>
                 </li>
