--- a/templates/sitemap.xml.tmpl
+++ b/templates/sitemap.xml.tmpl
@@ -13,7 +13,7 @@
             <priority>0.7</priority>
         </url>
         <url>
-            <loc>{{ .Url }}/markdown?file=/Resume.md</loc>
+            <loc>{{ .Url }}/resume</loc>
             <lastmod>2024-01-15</lastmod>
             <changefreq>monthly</changefreq>
             <priority>0.5</priority>
