--- a/website/pages/index.templ
+++ b/website/pages/index.templ
@@ -46,6 +46,9 @@ templ IndexHeader() {
 					@components.BGGLogo()
 				</a>
 			</li>
+			<li>
+				@components.ThemeSwitch()
+			</li>
 		</ul>
 	</header>
 }
