--- a/website/layouts/base.templ
+++ b/website/layouts/base.templ
@@ -22,7 +22,7 @@ templ head(title string, description string) {
 	<meta name="description" content={ description }/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-	<link rel="icon" href="/images/icons/favicon.ico"/>
+	<link rel="icon" href="/favicon.ico"/>
 	<!-- Styles -->
 	<link rel="stylesheet" href="/styles/styles.css"/>
 	<!-- Scripts -->
