--- a/website/pages/markdown.templ
+++ b/website/pages/markdown.templ
@@ -1,24 +1,22 @@
 package pages
 
+import "github.com/NDoolan360/go-htmx-site/website/components"
+
 templ Markdown(source templ.SafeURL) {
 	<main id="markdown" class="px-0 mx-8 md:mx-16 lg:mx-32 max-w-full">
 		<section class="flex flex-row items-center justify-between">
 			<h1>
 				<a href="/">/ND </a>
 			</h1>
+			<span class="w-fit">
+				@components.ThemeSwitch()
+			</span>
 		</section>
 		<section>
 			<span class="loader" _="on 'zero-md-rendered' from document remove me"></span>
 			<zero-md src={ string(source) }>
 				<template>
-					<style>
-                    .markdown-body {
-                        color: var(--text);
-                    }
-                    .markdown-body a {
-                        color: var(--primary);
-                    }
-                </style>
+					<style>.markdown-body {color: var(--text);}.markdown-body a {color: var(--primary);}</style>
 				</template>
 			</zero-md>
 		</section>
